# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  answers.json
config/: config.json
include/: ConverterJSON.h  InvertedIndex.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  Main.cpp  SearchServer.cpp
tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
